Done dana dan :). Revise once

--- a/index.html
+++ b/index.html
@@ -164,7 +164,7 @@
         <div id="projects-title">
             <div class="section-top-title">OUR WORK</div>
             <div class="section-background-title">PROJECTS</div>
-            <a href="#" class="section-button">VIEW ALL SERVICES</a>
+            <a class="section-button">VIEW ALL WORKS</a>
         </div>
         <div id="project-items-section">
             <div class="project-list">
@@ -172,36 +172,42 @@
                 <div class="hover-text">
                     <div class="text-content">VIEW PROJECT</div>
                 </div>
+                <div class="overlay-image"></div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-4.jpg" alt="">
                 <div class="hover-text">
                     <div class="text-content">VIEW PROJECT</div>
                 </div>
+                <div class="overlay-image"></div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-3.jpg" alt="">
                 <div class="hover-text">
                     <div class="text-content">VIEW PROJECT</div>
                 </div>
+                <div class="overlay-image"></div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-6.jpg" alt="">
                 <div class="hover-text">
                     <div class="text-content">VIEW PROJECT</div>
                 </div>
+                <div class="overlay-image"></div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-5.jpg" alt="">
                 <div class="hover-text">
                     <div class="text-content">VIEW PROJECT</div>
                 </div>
+                <div class="overlay-image"></div>
             </div>
             <div class="project-list">
                 <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/p-2.jpg" alt="">
                 <div class="hover-text">
                     <div class="text-content">VIEW PROJECT</div>
                 </div>
+                <div class="overlay-image"></div>
             </div>
         </div>
 
@@ -397,11 +403,11 @@
         <!-- Trusted By companies -->
         <div id="companies-logo">
             <p>TRUSTED BY TOP COMPANIES</p>
-            <h1>LOGO 1</h1>
-            <h1>LOGO 2</h1>
-            <h1>LOGO 3</h1>
-            <h1>LOGO 4</h1>
-            <h1>LOGO 5</h1>
+            <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-1w.png" alt="logo-1">
+            <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-2w.png" alt="logo-2">
+            <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-3w.png" alt="logo-3">
+            <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-4w.png" alt="logo-4">
+            <img src="https://nuuk-e3eaa.firebaseapp.com/assets/img/logo-5w.png" alt="logo-5">
         </div>
     </div>
     <footer>
