Project Ready:- Onclick Sidenav added for mobile version:)

--- a/index.html
+++ b/index.html
@@ -12,12 +12,12 @@
     <script>
       function openNav() {
         var my_side_nav = document.getElementById("mySidenav");
-        my_side_nav.style.width = "30%";
         my_side_nav.style.display = "block";
       }
+      
 
       function closeNav() {
-        document.getElementById("mySidenav").style.width = "0";
+        document.getElementById("mySidenav").style.display="none";
       }
 
       document.getElementById("mySidenav").style.display = "none";
